lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> instructions_opt
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> empty
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instructions -> { instructions }
Rule 8     instruction -> statement ;
Rule 9     instruction -> IF ( condition ) instructions
Rule 10    instruction -> IF ( condition ) instructions ELSE instructions
Rule 11    instruction -> FOR ID = range instructions
Rule 12    instruction -> WHILE ( condition ) instructions
Rule 13    range -> expression : expression
Rule 14    condition -> expression EQ expression
Rule 15    condition -> expression NEQ expression
Rule 16    condition -> expression LE expression
Rule 17    condition -> expression GE expression
Rule 18    condition -> expression < expression
Rule 19    condition -> expression > expression
Rule 20    statement -> assignment
Rule 21    statement -> print_statement
Rule 22    assignment -> variable = expression
Rule 23    assignment -> variable = matrix_function
Rule 24    assignment -> variable = matrix
Rule 25    assignment -> variable ADDASSIGN expression
Rule 26    assignment -> variable SUBASSIGN expression
Rule 27    assignment -> variable MULASSIGN expression
Rule 28    assignment -> variable DIVASSIGN expression
Rule 29    matrix_function -> matrix_function_name ( INT )
Rule 30    matrix_function_name -> ZEROS
Rule 31    matrix_function_name -> ONES
Rule 32    matrix_function_name -> EYE
Rule 33    matrix -> [ vectors ]
Rule 34    vectors -> vectors , vector
Rule 35    vectors -> vector
Rule 36    vector -> [ variables ]
Rule 37    variables -> variables , variable
Rule 38    variables -> variable
Rule 39    variable -> ID
Rule 40    variable -> element
Rule 41    variable -> number
Rule 42    element -> vector_element
Rule 43    element -> matrix_element
Rule 44    vector_element -> ID [ INT ]
Rule 45    matrix_element -> ID [ INT , INT ]
Rule 46    expression -> expression + expression
Rule 47    expression -> expression - expression
Rule 48    expression -> expression * expression
Rule 49    expression -> expression / expression
Rule 50    expression -> expression DOTADD expression
Rule 51    expression -> expression DOTSUB expression
Rule 52    expression -> expression DOTMUL expression
Rule 53    expression -> expression DOTDIV expression
Rule 54    expression -> expression '
Rule 55    expression -> - expression
Rule 56    expression -> ( expression )
Rule 57    expression -> variable
Rule 58    number -> INT
Rule 59    number -> FLOAT
Rule 60    print_statement -> PRINT printables
Rule 61    printables -> printables , printable
Rule 62    printables -> printable
Rule 63    printable -> STRING
Rule 64    printable -> variable
Rule 65    statement -> BREAK
Rule 66    statement -> CONTINUE
Rule 67    statement -> RETURN variable

Terminals, with rules where they appear

'                    : 54
(                    : 9 10 12 29 56
)                    : 9 10 12 29 56
*                    : 48
+                    : 46
,                    : 34 37 45 61
-                    : 47 55
/                    : 49
:                    : 13
;                    : 8
<                    : 18
=                    : 11 22 23 24
>                    : 19
ADDASSIGN            : 25
BREAK                : 65
CONTINUE             : 66
DIVASSIGN            : 28
DOTADD               : 50
DOTDIV               : 53
DOTMUL               : 52
DOTSUB               : 51
ELSE                 : 10
EQ                   : 14
EYE                  : 32
FLOAT                : 59
FOR                  : 11
GE                   : 17
ID                   : 11 39 44 45
IF                   : 9 10
INT                  : 29 44 45 45 58
LE                   : 16
MULASSIGN            : 27
NEQ                  : 15
ONES                 : 31
PRINT                : 60
RETURN               : 67
STRING               : 63
SUBASSIGN            : 26
WHILE                : 12
ZEROS                : 30
[                    : 33 36 44 45
]                    : 33 36 44 45
error                : 
{                    : 7
}                    : 7

Nonterminals, with rules where they appear

assignment           : 20
condition            : 9 10 12
element              : 40
empty                : 4
expression           : 13 13 14 14 15 15 16 16 17 17 18 18 19 19 22 25 26 27 28 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 56
instruction          : 5 6
instructions         : 3 5 7 9 10 10 11 12
instructions_opt     : 2
matrix               : 24
matrix_element       : 43
matrix_function      : 23
matrix_function_name : 29
number               : 41
print_statement      : 21
printable            : 61 62
printables           : 60 61
program              : 0
range                : 11
statement            : 8
variable             : 22 23 24 25 26 27 28 37 38 57 64 67
variables            : 36 37
vector               : 34 35
vector_element       : 42
vectors              : 33 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> . empty
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instructions -> . { instructions }
    (1) empty -> .
    (8) instruction -> . statement ;
    (9) instruction -> . IF ( condition ) instructions
    (10) instruction -> . IF ( condition ) instructions ELSE instructions
    (11) instruction -> . FOR ID = range instructions
    (12) instruction -> . WHILE ( condition ) instructions
    (20) statement -> . assignment
    (21) statement -> . print_statement
    (65) statement -> . BREAK
    (66) statement -> . CONTINUE
    (67) statement -> . RETURN variable
    (22) assignment -> . variable = expression
    (23) assignment -> . variable = matrix_function
    (24) assignment -> . variable = matrix
    (25) assignment -> . variable ADDASSIGN expression
    (26) assignment -> . variable SUBASSIGN expression
    (27) assignment -> . variable MULASSIGN expression
    (28) assignment -> . variable DIVASSIGN expression
    (60) print_statement -> . PRINT printables
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    {               shift and go to state 6
    $end            reduce using rule 1 (empty -> .)
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    statement                      shift and go to state 7
    assignment                     shift and go to state 12
    print_statement                shift and go to state 13
    variable                       shift and go to state 17
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 1

    (0) S' -> program .



state 2

    (2) program -> instructions_opt .

    $end            reduce using rule 2 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (8) instruction -> . statement ;
    (9) instruction -> . IF ( condition ) instructions
    (10) instruction -> . IF ( condition ) instructions ELSE instructions
    (11) instruction -> . FOR ID = range instructions
    (12) instruction -> . WHILE ( condition ) instructions
    (20) statement -> . assignment
    (21) statement -> . print_statement
    (65) statement -> . BREAK
    (66) statement -> . CONTINUE
    (67) statement -> . RETURN variable
    (22) assignment -> . variable = expression
    (23) assignment -> . variable = matrix_function
    (24) assignment -> . variable = matrix
    (25) assignment -> . variable ADDASSIGN expression
    (26) assignment -> . variable SUBASSIGN expression
    (27) assignment -> . variable MULASSIGN expression
    (28) assignment -> . variable DIVASSIGN expression
    (60) print_statement -> . PRINT printables
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    instruction                    shift and go to state 25
    statement                      shift and go to state 7
    assignment                     shift and go to state 12
    print_statement                shift and go to state 13
    variable                       shift and go to state 17
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 4

    (4) instructions_opt -> empty .

    $end            reduce using rule 4 (instructions_opt -> empty .)


state 5

    (6) instructions -> instruction .

    IF              reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    ID              reduce using rule 6 (instructions -> instruction .)
    INT             reduce using rule 6 (instructions -> instruction .)
    FLOAT           reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)
    ELSE            reduce using rule 6 (instructions -> instruction .)


state 6

    (7) instructions -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instructions -> . { instructions }
    (8) instruction -> . statement ;
    (9) instruction -> . IF ( condition ) instructions
    (10) instruction -> . IF ( condition ) instructions ELSE instructions
    (11) instruction -> . FOR ID = range instructions
    (12) instruction -> . WHILE ( condition ) instructions
    (20) statement -> . assignment
    (21) statement -> . print_statement
    (65) statement -> . BREAK
    (66) statement -> . CONTINUE
    (67) statement -> . RETURN variable
    (22) assignment -> . variable = expression
    (23) assignment -> . variable = matrix_function
    (24) assignment -> . variable = matrix
    (25) assignment -> . variable ADDASSIGN expression
    (26) assignment -> . variable SUBASSIGN expression
    (27) assignment -> . variable MULASSIGN expression
    (28) assignment -> . variable DIVASSIGN expression
    (60) print_statement -> . PRINT printables
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    {               shift and go to state 6
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    instructions                   shift and go to state 26
    instruction                    shift and go to state 5
    statement                      shift and go to state 7
    assignment                     shift and go to state 12
    print_statement                shift and go to state 13
    variable                       shift and go to state 17
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 7

    (8) instruction -> statement . ;

    ;               shift and go to state 27


state 8

    (9) instruction -> IF . ( condition ) instructions
    (10) instruction -> IF . ( condition ) instructions ELSE instructions

    (               shift and go to state 28


state 9

    (11) instruction -> FOR . ID = range instructions

    ID              shift and go to state 29


state 10

    (39) variable -> ID .
    (44) vector_element -> ID . [ INT ]
    (45) matrix_element -> ID . [ INT , INT ]

    =               reduce using rule 39 (variable -> ID .)
    ADDASSIGN       reduce using rule 39 (variable -> ID .)
    SUBASSIGN       reduce using rule 39 (variable -> ID .)
    MULASSIGN       reduce using rule 39 (variable -> ID .)
    DIVASSIGN       reduce using rule 39 (variable -> ID .)
    ;               reduce using rule 39 (variable -> ID .)
    ,               reduce using rule 39 (variable -> ID .)
    EQ              reduce using rule 39 (variable -> ID .)
    NEQ             reduce using rule 39 (variable -> ID .)
    LE              reduce using rule 39 (variable -> ID .)
    GE              reduce using rule 39 (variable -> ID .)
    <               reduce using rule 39 (variable -> ID .)
    >               reduce using rule 39 (variable -> ID .)
    +               reduce using rule 39 (variable -> ID .)
    -               reduce using rule 39 (variable -> ID .)
    *               reduce using rule 39 (variable -> ID .)
    /               reduce using rule 39 (variable -> ID .)
    DOTADD          reduce using rule 39 (variable -> ID .)
    DOTSUB          reduce using rule 39 (variable -> ID .)
    DOTMUL          reduce using rule 39 (variable -> ID .)
    DOTDIV          reduce using rule 39 (variable -> ID .)
    '               reduce using rule 39 (variable -> ID .)
    )               reduce using rule 39 (variable -> ID .)
    :               reduce using rule 39 (variable -> ID .)
    {               reduce using rule 39 (variable -> ID .)
    IF              reduce using rule 39 (variable -> ID .)
    FOR             reduce using rule 39 (variable -> ID .)
    WHILE           reduce using rule 39 (variable -> ID .)
    BREAK           reduce using rule 39 (variable -> ID .)
    CONTINUE        reduce using rule 39 (variable -> ID .)
    RETURN          reduce using rule 39 (variable -> ID .)
    PRINT           reduce using rule 39 (variable -> ID .)
    ID              reduce using rule 39 (variable -> ID .)
    INT             reduce using rule 39 (variable -> ID .)
    FLOAT           reduce using rule 39 (variable -> ID .)
    ]               reduce using rule 39 (variable -> ID .)
    [               shift and go to state 30


state 11

    (12) instruction -> WHILE . ( condition ) instructions

    (               shift and go to state 31


state 12

    (20) statement -> assignment .

    ;               reduce using rule 20 (statement -> assignment .)


state 13

    (21) statement -> print_statement .

    ;               reduce using rule 21 (statement -> print_statement .)


state 14

    (65) statement -> BREAK .

    ;               reduce using rule 65 (statement -> BREAK .)


state 15

    (66) statement -> CONTINUE .

    ;               reduce using rule 66 (statement -> CONTINUE .)


state 16

    (67) statement -> RETURN . variable
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    variable                       shift and go to state 32
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 17

    (22) assignment -> variable . = expression
    (23) assignment -> variable . = matrix_function
    (24) assignment -> variable . = matrix
    (25) assignment -> variable . ADDASSIGN expression
    (26) assignment -> variable . SUBASSIGN expression
    (27) assignment -> variable . MULASSIGN expression
    (28) assignment -> variable . DIVASSIGN expression

    =               shift and go to state 33
    ADDASSIGN       shift and go to state 34
    SUBASSIGN       shift and go to state 35
    MULASSIGN       shift and go to state 36
    DIVASSIGN       shift and go to state 37


state 18

    (60) print_statement -> PRINT . printables
    (61) printables -> . printables , printable
    (62) printables -> . printable
    (63) printable -> . STRING
    (64) printable -> . variable
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    STRING          shift and go to state 40
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    printables                     shift and go to state 38
    printable                      shift and go to state 39
    variable                       shift and go to state 41
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 19

    (40) variable -> element .

    =               reduce using rule 40 (variable -> element .)
    ADDASSIGN       reduce using rule 40 (variable -> element .)
    SUBASSIGN       reduce using rule 40 (variable -> element .)
    MULASSIGN       reduce using rule 40 (variable -> element .)
    DIVASSIGN       reduce using rule 40 (variable -> element .)
    ;               reduce using rule 40 (variable -> element .)
    ,               reduce using rule 40 (variable -> element .)
    EQ              reduce using rule 40 (variable -> element .)
    NEQ             reduce using rule 40 (variable -> element .)
    LE              reduce using rule 40 (variable -> element .)
    GE              reduce using rule 40 (variable -> element .)
    <               reduce using rule 40 (variable -> element .)
    >               reduce using rule 40 (variable -> element .)
    +               reduce using rule 40 (variable -> element .)
    -               reduce using rule 40 (variable -> element .)
    *               reduce using rule 40 (variable -> element .)
    /               reduce using rule 40 (variable -> element .)
    DOTADD          reduce using rule 40 (variable -> element .)
    DOTSUB          reduce using rule 40 (variable -> element .)
    DOTMUL          reduce using rule 40 (variable -> element .)
    DOTDIV          reduce using rule 40 (variable -> element .)
    '               reduce using rule 40 (variable -> element .)
    )               reduce using rule 40 (variable -> element .)
    :               reduce using rule 40 (variable -> element .)
    {               reduce using rule 40 (variable -> element .)
    IF              reduce using rule 40 (variable -> element .)
    FOR             reduce using rule 40 (variable -> element .)
    WHILE           reduce using rule 40 (variable -> element .)
    BREAK           reduce using rule 40 (variable -> element .)
    CONTINUE        reduce using rule 40 (variable -> element .)
    RETURN          reduce using rule 40 (variable -> element .)
    PRINT           reduce using rule 40 (variable -> element .)
    ID              reduce using rule 40 (variable -> element .)
    INT             reduce using rule 40 (variable -> element .)
    FLOAT           reduce using rule 40 (variable -> element .)
    ]               reduce using rule 40 (variable -> element .)


state 20

    (41) variable -> number .

    =               reduce using rule 41 (variable -> number .)
    ADDASSIGN       reduce using rule 41 (variable -> number .)
    SUBASSIGN       reduce using rule 41 (variable -> number .)
    MULASSIGN       reduce using rule 41 (variable -> number .)
    DIVASSIGN       reduce using rule 41 (variable -> number .)
    ;               reduce using rule 41 (variable -> number .)
    ,               reduce using rule 41 (variable -> number .)
    EQ              reduce using rule 41 (variable -> number .)
    NEQ             reduce using rule 41 (variable -> number .)
    LE              reduce using rule 41 (variable -> number .)
    GE              reduce using rule 41 (variable -> number .)
    <               reduce using rule 41 (variable -> number .)
    >               reduce using rule 41 (variable -> number .)
    +               reduce using rule 41 (variable -> number .)
    -               reduce using rule 41 (variable -> number .)
    *               reduce using rule 41 (variable -> number .)
    /               reduce using rule 41 (variable -> number .)
    DOTADD          reduce using rule 41 (variable -> number .)
    DOTSUB          reduce using rule 41 (variable -> number .)
    DOTMUL          reduce using rule 41 (variable -> number .)
    DOTDIV          reduce using rule 41 (variable -> number .)
    '               reduce using rule 41 (variable -> number .)
    )               reduce using rule 41 (variable -> number .)
    :               reduce using rule 41 (variable -> number .)
    {               reduce using rule 41 (variable -> number .)
    IF              reduce using rule 41 (variable -> number .)
    FOR             reduce using rule 41 (variable -> number .)
    WHILE           reduce using rule 41 (variable -> number .)
    BREAK           reduce using rule 41 (variable -> number .)
    CONTINUE        reduce using rule 41 (variable -> number .)
    RETURN          reduce using rule 41 (variable -> number .)
    PRINT           reduce using rule 41 (variable -> number .)
    ID              reduce using rule 41 (variable -> number .)
    INT             reduce using rule 41 (variable -> number .)
    FLOAT           reduce using rule 41 (variable -> number .)
    ]               reduce using rule 41 (variable -> number .)


state 21

    (42) element -> vector_element .

    =               reduce using rule 42 (element -> vector_element .)
    ADDASSIGN       reduce using rule 42 (element -> vector_element .)
    SUBASSIGN       reduce using rule 42 (element -> vector_element .)
    MULASSIGN       reduce using rule 42 (element -> vector_element .)
    DIVASSIGN       reduce using rule 42 (element -> vector_element .)
    ;               reduce using rule 42 (element -> vector_element .)
    ,               reduce using rule 42 (element -> vector_element .)
    EQ              reduce using rule 42 (element -> vector_element .)
    NEQ             reduce using rule 42 (element -> vector_element .)
    LE              reduce using rule 42 (element -> vector_element .)
    GE              reduce using rule 42 (element -> vector_element .)
    <               reduce using rule 42 (element -> vector_element .)
    >               reduce using rule 42 (element -> vector_element .)
    +               reduce using rule 42 (element -> vector_element .)
    -               reduce using rule 42 (element -> vector_element .)
    *               reduce using rule 42 (element -> vector_element .)
    /               reduce using rule 42 (element -> vector_element .)
    DOTADD          reduce using rule 42 (element -> vector_element .)
    DOTSUB          reduce using rule 42 (element -> vector_element .)
    DOTMUL          reduce using rule 42 (element -> vector_element .)
    DOTDIV          reduce using rule 42 (element -> vector_element .)
    '               reduce using rule 42 (element -> vector_element .)
    )               reduce using rule 42 (element -> vector_element .)
    :               reduce using rule 42 (element -> vector_element .)
    {               reduce using rule 42 (element -> vector_element .)
    IF              reduce using rule 42 (element -> vector_element .)
    FOR             reduce using rule 42 (element -> vector_element .)
    WHILE           reduce using rule 42 (element -> vector_element .)
    BREAK           reduce using rule 42 (element -> vector_element .)
    CONTINUE        reduce using rule 42 (element -> vector_element .)
    RETURN          reduce using rule 42 (element -> vector_element .)
    PRINT           reduce using rule 42 (element -> vector_element .)
    ID              reduce using rule 42 (element -> vector_element .)
    INT             reduce using rule 42 (element -> vector_element .)
    FLOAT           reduce using rule 42 (element -> vector_element .)
    ]               reduce using rule 42 (element -> vector_element .)


state 22

    (43) element -> matrix_element .

    =               reduce using rule 43 (element -> matrix_element .)
    ADDASSIGN       reduce using rule 43 (element -> matrix_element .)
    SUBASSIGN       reduce using rule 43 (element -> matrix_element .)
    MULASSIGN       reduce using rule 43 (element -> matrix_element .)
    DIVASSIGN       reduce using rule 43 (element -> matrix_element .)
    ;               reduce using rule 43 (element -> matrix_element .)
    ,               reduce using rule 43 (element -> matrix_element .)
    EQ              reduce using rule 43 (element -> matrix_element .)
    NEQ             reduce using rule 43 (element -> matrix_element .)
    LE              reduce using rule 43 (element -> matrix_element .)
    GE              reduce using rule 43 (element -> matrix_element .)
    <               reduce using rule 43 (element -> matrix_element .)
    >               reduce using rule 43 (element -> matrix_element .)
    +               reduce using rule 43 (element -> matrix_element .)
    -               reduce using rule 43 (element -> matrix_element .)
    *               reduce using rule 43 (element -> matrix_element .)
    /               reduce using rule 43 (element -> matrix_element .)
    DOTADD          reduce using rule 43 (element -> matrix_element .)
    DOTSUB          reduce using rule 43 (element -> matrix_element .)
    DOTMUL          reduce using rule 43 (element -> matrix_element .)
    DOTDIV          reduce using rule 43 (element -> matrix_element .)
    '               reduce using rule 43 (element -> matrix_element .)
    )               reduce using rule 43 (element -> matrix_element .)
    :               reduce using rule 43 (element -> matrix_element .)
    {               reduce using rule 43 (element -> matrix_element .)
    IF              reduce using rule 43 (element -> matrix_element .)
    FOR             reduce using rule 43 (element -> matrix_element .)
    WHILE           reduce using rule 43 (element -> matrix_element .)
    BREAK           reduce using rule 43 (element -> matrix_element .)
    CONTINUE        reduce using rule 43 (element -> matrix_element .)
    RETURN          reduce using rule 43 (element -> matrix_element .)
    PRINT           reduce using rule 43 (element -> matrix_element .)
    ID              reduce using rule 43 (element -> matrix_element .)
    INT             reduce using rule 43 (element -> matrix_element .)
    FLOAT           reduce using rule 43 (element -> matrix_element .)
    ]               reduce using rule 43 (element -> matrix_element .)


state 23

    (58) number -> INT .

    =               reduce using rule 58 (number -> INT .)
    ADDASSIGN       reduce using rule 58 (number -> INT .)
    SUBASSIGN       reduce using rule 58 (number -> INT .)
    MULASSIGN       reduce using rule 58 (number -> INT .)
    DIVASSIGN       reduce using rule 58 (number -> INT .)
    ;               reduce using rule 58 (number -> INT .)
    ,               reduce using rule 58 (number -> INT .)
    EQ              reduce using rule 58 (number -> INT .)
    NEQ             reduce using rule 58 (number -> INT .)
    LE              reduce using rule 58 (number -> INT .)
    GE              reduce using rule 58 (number -> INT .)
    <               reduce using rule 58 (number -> INT .)
    >               reduce using rule 58 (number -> INT .)
    +               reduce using rule 58 (number -> INT .)
    -               reduce using rule 58 (number -> INT .)
    *               reduce using rule 58 (number -> INT .)
    /               reduce using rule 58 (number -> INT .)
    DOTADD          reduce using rule 58 (number -> INT .)
    DOTSUB          reduce using rule 58 (number -> INT .)
    DOTMUL          reduce using rule 58 (number -> INT .)
    DOTDIV          reduce using rule 58 (number -> INT .)
    '               reduce using rule 58 (number -> INT .)
    )               reduce using rule 58 (number -> INT .)
    :               reduce using rule 58 (number -> INT .)
    {               reduce using rule 58 (number -> INT .)
    IF              reduce using rule 58 (number -> INT .)
    FOR             reduce using rule 58 (number -> INT .)
    WHILE           reduce using rule 58 (number -> INT .)
    BREAK           reduce using rule 58 (number -> INT .)
    CONTINUE        reduce using rule 58 (number -> INT .)
    RETURN          reduce using rule 58 (number -> INT .)
    PRINT           reduce using rule 58 (number -> INT .)
    ID              reduce using rule 58 (number -> INT .)
    INT             reduce using rule 58 (number -> INT .)
    FLOAT           reduce using rule 58 (number -> INT .)
    ]               reduce using rule 58 (number -> INT .)


state 24

    (59) number -> FLOAT .

    =               reduce using rule 59 (number -> FLOAT .)
    ADDASSIGN       reduce using rule 59 (number -> FLOAT .)
    SUBASSIGN       reduce using rule 59 (number -> FLOAT .)
    MULASSIGN       reduce using rule 59 (number -> FLOAT .)
    DIVASSIGN       reduce using rule 59 (number -> FLOAT .)
    ;               reduce using rule 59 (number -> FLOAT .)
    ,               reduce using rule 59 (number -> FLOAT .)
    EQ              reduce using rule 59 (number -> FLOAT .)
    NEQ             reduce using rule 59 (number -> FLOAT .)
    LE              reduce using rule 59 (number -> FLOAT .)
    GE              reduce using rule 59 (number -> FLOAT .)
    <               reduce using rule 59 (number -> FLOAT .)
    >               reduce using rule 59 (number -> FLOAT .)
    +               reduce using rule 59 (number -> FLOAT .)
    -               reduce using rule 59 (number -> FLOAT .)
    *               reduce using rule 59 (number -> FLOAT .)
    /               reduce using rule 59 (number -> FLOAT .)
    DOTADD          reduce using rule 59 (number -> FLOAT .)
    DOTSUB          reduce using rule 59 (number -> FLOAT .)
    DOTMUL          reduce using rule 59 (number -> FLOAT .)
    DOTDIV          reduce using rule 59 (number -> FLOAT .)
    '               reduce using rule 59 (number -> FLOAT .)
    )               reduce using rule 59 (number -> FLOAT .)
    :               reduce using rule 59 (number -> FLOAT .)
    {               reduce using rule 59 (number -> FLOAT .)
    IF              reduce using rule 59 (number -> FLOAT .)
    FOR             reduce using rule 59 (number -> FLOAT .)
    WHILE           reduce using rule 59 (number -> FLOAT .)
    BREAK           reduce using rule 59 (number -> FLOAT .)
    CONTINUE        reduce using rule 59 (number -> FLOAT .)
    RETURN          reduce using rule 59 (number -> FLOAT .)
    PRINT           reduce using rule 59 (number -> FLOAT .)
    ID              reduce using rule 59 (number -> FLOAT .)
    INT             reduce using rule 59 (number -> FLOAT .)
    FLOAT           reduce using rule 59 (number -> FLOAT .)
    ]               reduce using rule 59 (number -> FLOAT .)


state 25

    (5) instructions -> instructions instruction .

    IF              reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    INT             reduce using rule 5 (instructions -> instructions instruction .)
    FLOAT           reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)
    ELSE            reduce using rule 5 (instructions -> instructions instruction .)


state 26

    (7) instructions -> { instructions . }
    (5) instructions -> instructions . instruction
    (8) instruction -> . statement ;
    (9) instruction -> . IF ( condition ) instructions
    (10) instruction -> . IF ( condition ) instructions ELSE instructions
    (11) instruction -> . FOR ID = range instructions
    (12) instruction -> . WHILE ( condition ) instructions
    (20) statement -> . assignment
    (21) statement -> . print_statement
    (65) statement -> . BREAK
    (66) statement -> . CONTINUE
    (67) statement -> . RETURN variable
    (22) assignment -> . variable = expression
    (23) assignment -> . variable = matrix_function
    (24) assignment -> . variable = matrix
    (25) assignment -> . variable ADDASSIGN expression
    (26) assignment -> . variable SUBASSIGN expression
    (27) assignment -> . variable MULASSIGN expression
    (28) assignment -> . variable DIVASSIGN expression
    (60) print_statement -> . PRINT printables
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    }               shift and go to state 42
    IF              shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 11
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24

    instruction                    shift and go to state 25
    statement                      shift and go to state 7
    assignment                     shift and go to state 12
    print_statement                shift and go to state 13
    variable                       shift and go to state 17
    element                        shift and go to state 19
    number                         shift and go to state 20
    vector_element                 shift and go to state 21
    matrix_element                 shift and go to state 22

state 27

    (8) instruction -> statement ; .

    IF              reduce using rule 8 (instruction -> statement ; .)
    FOR             reduce using rule 8 (instruction -> statement ; .)
    WHILE           reduce using rule 8 (instruction -> statement ; .)
    BREAK           reduce using rule 8 (instruction -> statement ; .)
    CONTINUE        reduce using rule 8 (instruction -> statement ; .)
    RETURN          reduce using rule 8 (instruction -> statement ; .)
    PRINT           reduce using rule 8 (instruction -> statement ; .)
    ID              reduce using rule 8 (instruction -> statement ; .)
    INT             reduce using rule 8 (instruction -> statement ; .)
    FLOAT           reduce using rule 8 (instruction -> statement ; .)
    $end            reduce using rule 8 (instruction -> statement ; .)
    }               reduce using rule 8 (instruction -> statement ; .)
    ELSE            reduce using rule 8 (instruction -> statement ; .)


state 28

    (9) instruction -> IF ( . condition ) instructions
    (10) instruction -> IF ( . condition ) instructions ELSE instructions
    (14) condition -> . expression EQ expression
    (15) condition -> . expression NEQ expression
    (16) condition -> . expression LE expression
    (17) condition -> . expression GE expression
    (18) condition -> . expression < expression
    (19) condition -> . expression > expression
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression DOTADD expression
    (51) expression -> . expression DOTSUB expression
    (52) expression -> . expression DOTMUL expression
    (53) expression -> . expression DOTDIV expression
    (54) expression -> . expression '
    (55) expression -> . - expression
    (56) expression -> . ( expression )
    (57) expression -> . variable
    (39) variable -> . ID
    (40) variable -> . element
    (41) variable -> . number
    (42) element -> . vector_element
    (43) element -> . matrix_element
    (58) number -> . INT
    (59) number -> . FLOAT
    (44) vector_element -> . ID [ INT ]
    (45) matrix_element -> . ID [ INT , INT ]

    -               shift and go to state 46
    (               shift and go to state 43
    ID              shift and go to state 10
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
